variables.Variables.scala.error
Compilation error:
Variables:2: error: not found: type int
var cpt : int = 0
          ^Variables:5: error: not found: value int
  int = int +1
  ^