variables.Variables.scala.code

var cpt : int = 0
while(!isOverBaggle()){
  forward()
  int = int +1
}
pickupBaggle()
